<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SignupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/signup_firstName_txt"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/signup_lastName_txt"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/signup_email_txt"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/signup_password_txt"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <RadioGroup
            android:id="@+id/signup_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">
            <TextView
                android:text="@string/type_of_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/signup_organiser_radio"
                android:text="@string/coach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/signup_participant_radio"
                android:text="@string/player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/signup_register_btn"
            android:text="@string/register"
            android:textColor="@color/mdtp_white"
            android:background="@color/startblue"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
