<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:style="@style/CardView"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:elevation="3dp"
    android:layout_margin="6dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/group_linear_left"
            android:layout_toRightOf="@id/group_linear_left">

            <TextView
                android:id="@+id/schedule_item_name"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:src="@mipmap/location"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:id="@+id/schedule_item_location"
                    android:text="@string/location"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:src="@mipmap/date"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:id="@+id/schedule_item_date"
                        android:text="@string/date"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:src="@mipmap/time"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:id="@+id/schedule_item_time"
                        android:text="@string/time"
                        android:layout_gravity="center_vertical"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>

