<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/graylight">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/gradientbackground"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mdtp_white"
                android:layout_marginTop="125dp"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/group_exercise_organiser"/>
        </LinearLayout>
        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/mdtp_white"
            tools:style="@style/CardView"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="4dp"
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_marginTop="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:paddingTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignLeft="@+id/login_email_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_email_black_24dp"
                        android:layout_alignStart="@+id/login_email_editText" />
                    <EditText
                        android:id="@+id/login_email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:layout_marginStart="40dp"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_alignLeft="@+id/login_password_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_lock_black_24dp"
                        android:layout_alignStart="@+id/login_password_editText" />
                    <EditText
                        android:id="@+id/login_password_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:layout_marginStart="40dp"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="50dp">
                    <Button
                        android:id="@+id/login_login_btn"
                        android:text="@string/login"
                        android:background="@color/startblue"
                        android:textColor="@color/mdtp_white"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="25dp">
                    <Button
                        android:id="@+id/login_register_btn"
                        android:text="@string/register"
                        android:background="@color/startblue"
                        android:textColor="@color/mdtp_white"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>
